--- a/css/style.css
+++ b/css/style.css
@@ -207,12 +207,16 @@ width: 100%;
 }
 
 .book-title {
+    text-align: left;
+    width: 146px;
+    height: 60px;
     font-family: 'Ramaraja', serif;
     font-size: 21px;
     line-height: 30px;
     color: #555963;
 }
 .book-author {
+    text-align: left;
     font-family: 'Amiri', serif;
     font-size: 16px;
     line-height: 30px;
@@ -220,7 +224,6 @@ width: 100%;
 }
 .book-item {
     text-align: center;
-
     margin: 20px 15px;
     display: inline-block;
 
@@ -270,7 +273,12 @@ width: 100%;
 }
 
 .container_button {
+
+    margin-top: 90px;
     text-align: center;
+}
+.container_button a {
+    transition: 5s ease color;
 }
 a.btn {
     font-family: 'Lato', sans-serif;
@@ -962,3 +970,98 @@ button[type=submit] {
 .footer_social {
     margin: 80px 0 0 0;
 }
+.billing {
+    margin: 150px;
+    padding: 150px;
+}
+input[type=radio] {
+    display: none;
+}
+input[type=radio]+label {
+    padding-left: 30px;
+    position: relative;
+}
+input[type=radio]+label::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    border: 1px solid #da8913;
+    border-radius: 50%;
+}
+input[type=radio]+label::after{
+    content: '';
+    position: absolute;
+    left: 1px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    background: transparent;
+    border-radius: 50%;
+}
+input[type=radio]:checked + label::after {
+    background: #da8913;
+}
+.shipping label {
+    padding-right: 35px;
+}
+.e-mail::before {
+
+}
+.leftpart {
+    float: left;
+    width: 50%;
+}
+.rightpart {
+    float: right;
+    width: 50%;
+}
+.form-cart {
+    width: 100%;
+}
+.shipping-method {
+    width: 100%;
+}
+.shipping_left {
+    width: 50%;
+    float: left;
+}
+.shipping_right {
+    text-align: right;
+    width: 50%;
+    float: right;
+}
+.cart-wrap {
+    margin-top: 240px;
+}
+.cart-wrap h1 {
+    text-align: left;
+}
+.payment {
+    width: 100%;
+    height: 300px;
+}
+.payment-radio {
+    width: 187px;
+    height: 29px;
+    display: inline-block;
+    margin: 0px 87px 0 10px
+}
+
+.payment label {
+    margin-right: 10px;
+}
+/*
+.payment img {
+    margin-right: 135px;
+}
+.payment h1 {
+    text-align: left;
+}
+*/
