--- a/css/cs-skin-elastic.css
+++ b/css/cs-skin-elastic.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
 	font-family: 'icomoon';
 	src:url('../fonts/icomoon/icomoon.eot?-rdnm34');
 	src:url('../fonts/icomoon/icomoon.eot?#iefix-rdnm34') format('embedded-opentype'),
@@ -8,12 +8,14 @@
 	font-weight: normal;
 	font-style: normal;
 }
+*/
+@import url('https://fonts.googleapis.com/css?family=Amiri|Lato:400,700|Ramaraja|Rozha+One|PT+Serif|Work+Sans|Yrsa');
+
+
 
 div.cs-skin-elastic {
 	background: transparent;
-	font-size: 1.5em;
-	font-weight: 700;
-	color: #5b8583;
+
 }
 
 @media screen and (max-width: 30em) {
@@ -21,12 +23,16 @@ div.cs-skin-elastic {
 }
 
 .cs-skin-elastic > span {
+	color: #959ba1;
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
 	background-color: #fff;
 	z-index: 100;
 }
 
 .cs-skin-elastic > span::after {
-	font-family: 'icomoon';
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
 	content: '\e005';
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -114,6 +120,8 @@ div.cs-skin-elastic {
 
 
 .cs-skin-elastic .cs-options span {
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
 	background-repeat: no-repeat;
 	background-position: 1.5em 50%;
 	background-size: 2em auto;
