--- a/css/cs-select.css
+++ b/css/cs-select.css
@@ -7,7 +7,7 @@ div.cs-select {
 	background: #fff;
 	z-index: 100;
 	width: 100%;
-	max-width: 180px;
+	max-width: 205px;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -28,7 +28,7 @@ div.cs-select:focus {
 	display: block;
 	position: relative;
 	cursor: pointer;
-	padding: 1em;
+	/*padding: 1em; */
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -37,6 +37,7 @@ div.cs-select:focus {
 /* Placeholder and selected option */
 .cs-select > span {
 	padding-right: 3em;
+	padding-bottom: 28px;
 }
 
 .cs-select > span::after,
