--- a/css/cs-skin-elastic.css
+++ b/css/cs-skin-elastic.css
@@ -33,7 +33,10 @@ div.cs-skin-elastic {
 .cs-skin-elastic > span::after {
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
-	content: '\e005';
+	content: '';
+	background-image: url("../img/shape19.png");
+	width: 14px;
+	height: 8px;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
