--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,7 +11,7 @@
             padding-top: 2px;
         }
         .shipping-inner {
-            float: left;
+
             box-sizing: border-box;
         }
     }
@@ -67,6 +67,17 @@
         }
 
     }
+    @media all and (max-width: 655px){
+        .info_boks {
+            float: left;
+        }
+        .menu {
+            height: 190px;
+        }
+        .cart-wrap {
+            margin-top: 280px;
+        }
+    }
     @media all and (max-width: 600px) and (orientation: landscape){
         .presentation_book {
             background-color: chocolate;
@@ -100,7 +111,7 @@
 
     /* For devices 400px and larger: */
     @media only screen and (min-device-width: 400px) {
-       
+
     }
 
 
