--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,12 @@ body {
 .container button {
     text-align: center;
 }
-.menu {
 
+#your-cart {
+    width: calc(100% - 30px);
+}
+
+.menu {
     top: 15px;
     left: 100px;
     right: 100px;
@@ -42,9 +46,14 @@ body {
     background-color: white;
     height: 98px;
 }
+.menu ul li {
+    display: inline;
+    float: left;
+    list-style-type: none;
+}
 
 ul li {
-    display:inline;
+    display: inline;
     float: left;
     list-style-type: none;
 }
@@ -292,7 +301,19 @@ button.btn:hover {
     text-decoration: none;
     padding: 10px 60px;
     border: 2px solid #555963;
-    background: white;
+    /*background: white;*/
+    background: #da8913
+}
+input.btn:hover {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    font-weight: 400;
+    color: #45474b;
+    text-decoration: none;
+    border: 2px solid #555963;
+    /*background: white;*/
+    background: #da8913;
 }
 
 
@@ -307,6 +328,18 @@ a.btn {
     border: 2px solid #555963;
     background: white;
 }
+input.btn {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    font-weight: 400;
+    color: #45474b;
+    text-decoration: none;
+    padding: 10px 15px;
+    border: 2px solid #555963;
+    background: white;
+
+}
 button.btn {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
@@ -318,8 +351,11 @@ button.btn {
     border: 2px solid #555963;
     background: white;
 }
-button.btn:hover { background: #da8913; }
+
 button.btn:active { background: white; }
+
+input.btn:active { background: white; }
+
 
 a.btn:hover { background: #da8913; }
 a.btn:active { background: white; }
@@ -333,7 +369,6 @@ a.btn:active { background: white; }
     width: 50%;
 }
 span.proceed-count-font1 {
-    margin-right: ;
     font-family: 'Ramaraja', serif;
     font-size: 21px;
     color: #45474b;
@@ -356,6 +391,7 @@ span.proceed-count-font4 {
 .proceed-payment {
     float: right;
     width: 50%;
+    box-sizing: border-box;
 }
 
 .proceed-count table tr td {
@@ -494,7 +530,6 @@ span.proceed-count-font4 {
 }
 
 .menupopular hr {
-    size: 8px;
     color: #d3d9db;
 }
 .menupopular a {
@@ -544,6 +579,7 @@ span.proceed-count-font4 {
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
 }
 .section_book_autor {
+    position: relative;
     padding: 10px 10px 10px 10px;
     width: 35%;
     float: left;
@@ -552,7 +588,13 @@ span.proceed-count-font4 {
 .list_book img {
     padding: 45px 15px 10px 0px;
 }
-
+.bookmark {
+    position: absolute;
+    font-family: "Work Sans";
+    font-weight: bold;
+    font-size: 17px;
+    color: #555963;
+}
 /* fonts used in html */
 /*span.fontcaption */
 
@@ -889,7 +931,6 @@ width: 1060px;
 }
 .menu_futer hr {
     display: block;
-    size: 8px;
     color: #555963;
     position: relative;
 }
@@ -903,7 +944,6 @@ width: 1060px;
     font-weight: bold;
     list-style-type: none;
 }
-.menu_futer::after
 .footer_content {
     width: 100%;
 }
@@ -913,17 +953,19 @@ width: 1060px;
 }
 .footer_section_active {
     margin: 95px 0 0 0;
-    width: 35%;
+    width: 28%;
     float: right;
     position: relative;
 }
+.footer_section_active input {
+background-color: #f2fdff;;
+}
 
 .footer_section_active form {
-    margin: 13px 0 0 0;
+
 }
 .footer_section_active hr {
     display: block;
-    size: 8px;
     color: #555963;
 }
 
@@ -970,12 +1012,17 @@ width: 1060px;
 button[type=submit]:hover {
     border: none;
 }
+.subscribe_form {
+
+}
 form.subscribe_form {
-   width: 100%;
+    width: auto;
+    height: 76px;
+    border-bottom: 1px solid rgb(69, 70, 74);
 }
 .subscribe_form input {
     background-color: #f2fdff;
-    width: 206px;
+    
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -987,7 +1034,7 @@ form.subscribe_form {
 button.subscribe_button::before {
     content: "";
     width: 1px;
-    height: 20px;
+    height: 15px;
     background: #555963;
     display: inline-block;
     margin: 0 20px;
@@ -1054,10 +1101,6 @@ input[type=text] {
     transition: 0.5s;
     outline: none; */
 }
-input[type=text]:success {
-    border-color: green;
-    color: green;
-}
 input[type=text]:disabled {
     border-color: #45474b;
     background-color: #959ba1;
@@ -1070,10 +1113,6 @@ input[type=text]:active {
 input[type=text]:focus {
     border-color: #da8913;
     color: #da8913;
-}
-input[type=text]:error {
-    border-color: red;
-    color: red;
 }
 input[type=number] {
     border: none;
@@ -1092,6 +1131,9 @@ input[type=number] {
     width: 206px;
     color: darkgreen;
 }
+.has-error{
+    color: red;
+}
 button.subscribe_button{
     background-color: #f2fdff;
     color: #555963;
@@ -1109,21 +1151,6 @@ button.subscribe_button::after {
     display: inline-block;
 }
 
-/* button[type=submit]::after {
-    content: "";
-    background: url("../img/icons_svg/mail.svg");
-    position: absolute;
-} */
-
-
-
-/*button[type=submit]*/
-
-
- /*.footer_section_active img {
-    bottom: 24px;
-    right: 186px;
-} */
 .social_icon ul li {
     float: left;
     padding: 25px 15px 0 0;
@@ -1278,6 +1305,7 @@ input[type=radio]:checked + label::after {
 .form-cart {
     width: 100%;
     padding-top: 42px;
+    min-height: 295px;
 }
 
 .shipping-method {
@@ -1302,6 +1330,7 @@ input[type=radio]:checked + label::after {
     float: right;
 }
 .cart-wrap {
+    min-height: 400px;
     margin-top: 230px;
 }
 .cart-wrap h1 {
@@ -1331,7 +1360,7 @@ input[type=radio]:checked + label::after {
     width: 187px;
     height: 29px;
     display: inline-block;
-    margin: 35px 87px 0 10px
+    margin: 35px 80px 0 10px
 }
 
 .payment label {
@@ -1339,13 +1368,13 @@ input[type=radio]:checked + label::after {
 }
 .coupon-code {
     border-bottom: 1px solid #555963;
-    width: 350px ;
-    height:61px;
+    height:50px;
    }
 
-.coupon-inner {
+
+.coupon-wrap {
+    width: 30%;
     float: left;
-    width: 50%;
 }
 .coupon-code input{
     border: none;
@@ -1392,6 +1421,7 @@ button.coupon_button::after {
     width: 16px;
     height: 14px;
     display: inline-block;
+    margin-left: 5px;
 }
 
 button.coupon_button::before {
@@ -1419,9 +1449,7 @@ button.coupon_button::before {
 }
 
 .proceed-checkbox {
-    margin-right: 168px;
-    float: right;
-    width: 50%;
+    width: 100%;
 }
 .proceed-checkbox label {
     font-family: 'Lato', sans-serif;
@@ -1450,7 +1478,7 @@ button.coupon_button::before {
 
 
 .help-block {
-    /*display: none; */
+    display: none;
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     color: red;
@@ -1505,8 +1533,8 @@ input.form-block  {
     margin-left: -9px;
 }
 .gender label {
-    font-family: 'Lato', sans-serif
-    font-style: 16px;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
     color: #45474b;
 }
 .gender h3 {
@@ -1520,5 +1548,8 @@ input.form-block  {
     color: #45474b;
     padding-top: 65px;
     margin-right: 60px;
+}
+.table-cart {
+  /*  table-layout: fixed; */
 }
 
